--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -5,12 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./css/style.css">
-
   <link href="https://fonts.googleapis.com/css?family=Cinzel:400,900|Didact+Gothic|Nanum+Myeongjo|Quicksand" rel="stylesheet">
 
 </head>
-
-
 
 <header id="bigcontainer">
 
@@ -28,13 +25,9 @@
 <div id="aboutmelink"> 
 <ul>
 <li>
-    
     <a href="#home" style="color:black;" >ALL ABOUT ME.</a></li> 
-    <a href="http://127.0.0.1:5500/01week/resume/index.html"</a>
-</ul> </div>
-
-
-
+    <a href="https://erickaherod.github.io/web-workbook/01week/resume"></a>
+</ul>
 
 </div>
 
