--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -11,7 +11,7 @@
  
 </head>
 <body>
-  <img src="./IMG_1105.HEIC" alt="" class="body">
+  <img src="./IMG_1105.jpg" alt="" class="body">
     <header>
       <h1>Amber Jones</h1>
       <img src="../bio/Screen Shot 2018-11-17 at 7.35.39 PM.png">
