just messing with some stuff but I shouldnt break it right now lol

--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -14,7 +14,7 @@
   <img src="./IMG_1105.jpg" alt="" class="body">
     <header>
       <h1>Amber Jones</h1>
-      <img src="../bio/Screen Shot 2018-11-17 at 7.35.39 PM.png">
+      <img  src="../bio/Screen Shot 2018-11-17 at 7.35.39 PM.png" class="logo">
     </header>
     <main>
       <section>
