--- a/02week/bio/index.html
+++ b/02week/bio/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top">
     <!--Need to put picture of my face here, having trouble with sourcing image from image file-->
-    <div><img src="./image/profilepicedit.jpg" alt="profile pic"></div>
+    <!-- <div><img src="./image/profilepicedit.jpg" alt="profile pic"></div> -->
     <div><a href="">
         <h4>www.linkedin.com/in/brandon-turner-4bb919b1</h4>
       </a></div>
